# enrico

./: .gitmodules  .travis.yml  CMakeLists.txt
ci/: cmake_singlerod.sh  patch_singlerod_openfoam.sh  singlerod_matrix.sh  test_singlerod_openmc_openfoam.sh
config/: bashrc  controlDict
tests/singlerod/: make_openmc_model.py
tests/singlerod/short/openmc_openfoam/: settings.xml
tests/singlerod/short/openmc_openfoam/system/: controlDict
